Fix max-width issue on Safari (attempt 2)

--- a/styles.css
+++ b/styles.css
@@ -118,13 +118,14 @@ General Classes
 .nav_button {
   height: 70%;
   max-height: 50px;
-  max-width: 75px;
+  max-width: 50px;
   width: auto;
 }
 
 .small_nav_button {
   height: 50%;
   max-height: 20px;
+  max-width: 20px;
   width: auto;
 }
 
